--- a/css/style.css
+++ b/css/style.css
@@ -61,43 +61,35 @@ li {
     margin: 0 auto 80px;
     font-size: 30px;
 }
-.main-title::before {
-    content: "";
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background-color: var(--main-color);
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: -35px;
-    transition: var(--main-transition);
-    z-index: 1;
-}
+.main-title::before,
 .main-title::after {
     content: "";
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
+    width: 12px;
+    height: 12px;
     background-color: var(--main-color);
     position: absolute;
+    border-radius: 50%;
     top: 50%;
     transform: translateY(-50%);
-    left: -35px;
-    transition: var(--main-transition);
+}
+.main-title::before {
+    left: -30px;
+}
+.main-title::after {
+    right: -30px;
 }
 .main-title:hover::before {
     z-index: -1;
-    animation: right-move 0.5s linear forwards;
+    animation: left-move 0.5s linear forwards;
 }
 .main-title:hover::after {
     z-index: -1;
-    animation: left-move 0.5s linear forwards;
+    animation: right-move 0.5s linear forwards;
 }
 .main-title:hover {
     color: white;
     border: 2px solid white;
-    transition-delay: 0.6s;
+    transition-delay: 0.5s;
 }
 /* End Components */
 /* Start Header */
@@ -383,9 +375,9 @@ li {
 /* Start Gallery */
 .gallery {
     padding-top: var(--main-padding);
-    padding-bottom: var(--main-padding);  
-    background-color: var(--section-background);
+    padding-bottom: var(--main-padding);
     position: relative;
+    background-color: var(--section-background);
 }
 .gallery .container {
     display: grid;
@@ -395,11 +387,11 @@ li {
 .gallery .box {
     padding: 15px;
     background-color: white;
-    box-shadow: 0 12px 20px 0px rgb(0 0 0 / 13%), 0 2px 4px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
 }
 .gallery .box .image {
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
 .gallery .box .image::before {
     content: "";
@@ -408,19 +400,19 @@ li {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgb(255 255 255 / 20%);
-    height: 0;
     width: 0;
+    height: 0;
     opacity: 0;
     z-index: 2;
 }
 .gallery .box .image:hover::before {
     animation: flashing 0.7s;
 }
-.gallery .box .image img {
+.gallery .box img {
     max-width: 100%;
     transition: var(--main-transition);
 }
-.gallery .box .image:hover  img {
+.gallery .box .image:hover img {
     transform: rotate(5deg) scale(1.1);
 }
 /* End Gallery */
@@ -547,6 +539,7 @@ li {
 .testi {
     padding-top: var(--main-padding);
     padding-bottom: var(--main-padding);
+    background-color: var(--section-background);
 }
 .testi .container {
     display: grid;
