--- a/css/style.css
+++ b/css/style.css
@@ -871,6 +871,139 @@ li {
     font-size: 18px;
 }
 /* End Work */
+/* Start Events */
+.events {
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
+    position: relative;
+}
+.events .container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.events .container img {
+    max-width: 500px;
+}
+@media (max-width: 991px) {
+    .events .container img {
+        display: none;
+    }
+}
+.events .info .time {
+    display: flex;
+    margin-bottom: 50px;
+}
+.events .container .title {
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin: 40px 0 0;
+}
+.events .container .description {
+    text-align: center;
+    line-height: 1.8;
+    color: var(--paragraph-color);
+    font-size: 20px;
+}
+.events .container .info {
+    flex: 1;
+}
+.events .container .time {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    gap: 10px;
+}
+.events .container .time .unit {
+    transition: var(--main-transition);
+    width: 75px;
+    border-radius: 5px;
+    border: 1px solid #d4d4d4;
+    text-align: center;
+}
+.events .container .time .unit:hover,
+.events .container .time .unit:hover span:last-child {
+    border-color: var(--main-color);
+}
+.events .container .time span {
+    display: block;
+}
+.events .container .time span:nth-child(1) {
+    padding: 30px 0;
+    font-size: 30px;
+    color: var(--main-color);
+    font-weight: bold;
+}
+.events .container .time span:nth-child(2) {
+    display: block;
+    border-top: 1px solid #d4d4d4;
+    padding: 8px 10px;
+    transition: var(--main-transition);
+}
+.events .container .subscribe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.events .container .subscribe form {
+    display: flex;
+    width: 600px;
+    margin: 20px auto;
+    gap: 20px;
+    border-radius: 50px;
+    padding: 30px 40px;
+    background-color: #f6f5f5;
+}
+@media (max-width: 767px) {
+    .events .container .subscribe form {
+        flex-direction: column;
+        padding: 20px;
+        border-radius: 0;
+    }
+}
+.events .subscribe input[type="email"] {
+    padding: 20px;
+    border-radius: 50px;
+    border: none;
+    caret-color: var(--main-color);
+    outline: none;
+    flex: 1;
+}
+@media (max-width: 767px) {
+    .events .subscribe input[type="email"] {
+        border-radius: 0;
+    }
+}
+.events .subscribe input[type="email"]::placeholder {
+    transition: var(--main-transition);
+}
+.events .subscribe input[type="email"]:focus::placeholder {
+    opacity: 0;
+}
+.events .subscribe input[type="submit"] {
+    border: none;
+    border-radius: 50px;
+    padding: 20px;
+    background-color: var(--main-color);
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+@media (max-width: 767px) {
+    .events .subscribe input[type="submit"] {
+        border-radius: 0;
+    }
+}
+.events .subscribe input[type="submit"]:hover {
+    background-color: var(--main-color-alt);
+}
+/* End Events */
 /* Start Animation */
 @keyframes move-down {
     0%, 100% {
